# AutoJudge

./: README.md  app.py  autojudge.ipynb  main.py  pyproject.toml  tfidf_vectorizer.joblib
