[project]
name = "autojudge-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "wordcloud>=1.9.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
